Images now have default names.

--- a/app.css
+++ b/app.css
@@ -1,5 +1,6 @@
 body {
 	margin: 0;
+	font-family: sans-serif;
 	background-color: #999;
 }
 
@@ -35,9 +36,17 @@ body {
 	border: 1px solid #bbb;
 	list-style: none;
 	box-shadow: 1px 1px 3px #ddd;
+	text-align: center;
 }
 #image-list img {
 	max-height: 200px;
 	max-width: 300px;
 	border: 1px solid #bbb;
+}
+#image-list span.name {
+	display: block;
+	margin-top: 5px;
+	max-width: 300px;
+	font-size: 1.5em;
+	font-weight: bold;
 }
