--- a/app.css
+++ b/app.css
@@ -33,6 +33,8 @@ body {
 	float: left;
 	margin: 10px;
 	padding: 10px;
+	width: 300px;
+	height: 236px;
 	border: 1px solid #bbb;
 	list-style: none;
 	box-shadow: 1px 1px 3px #ddd;
@@ -46,7 +48,6 @@ body {
 #image-list span.name {
 	display: block;
 	margin-top: 5px;
-	max-width: 300px;
 	font-size: 1.5em;
 	font-weight: bold;
 }
